--- a/MovieWatchlist/Views/AddToWatchlistView.xaml
+++ b/MovieWatchlist/Views/AddToWatchlistView.xaml
@@ -7,7 +7,7 @@
              xmlns:local="clr-namespace:MovieWatchlist.Views"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="600">
-    
+
     <Grid Width="400">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -135,7 +135,8 @@
                 Text="Episodes" 
                 Grid.Row="8" 
                 FontSize="15"
-                Foreground="White"/>
+                Foreground="White"
+                Visibility="{Binding IsVisible, Mode=TwoWay}"/>
 
             <TextBox 
                 x:Name="EpisodesBox" 
@@ -146,6 +147,7 @@
                 SelectionBrush="#FFFFCC00" 
                 SelectionTextBrush="#FFFFCC00" 
                 BorderBrush="#FFFFCC00"
+                Visibility="{Binding IsVisible, Mode=TwoWay}"
                 Text="{Binding EpisodeCount, UpdateSourceTrigger=PropertyChanged}"/>
 
         </Grid>
