--- a/MovieWatchlist/MainWindow.xaml
+++ b/MovieWatchlist/MainWindow.xaml
@@ -3,36 +3,40 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
         xmlns:local="clr-namespace:MovieWatchlist" 
         xmlns:views="clr-namespace:MovieWatchlist.Views"
         xmlns:vms="clr-namespace:MovieWatchlist.ViewModels"
         mc:Ignorable="d"
-        Title="Movie Watchlist" Height="800" Width="620"
+        Title="Movie Watchlist" Height="800" Width="650"
         WindowStartupLocation="CenterScreen">
+    
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="#FF252222"/>
-            <GradientStop Color="#FF1D1515" Offset="1"/>
+            <GradientStop Color="#FF1B2A63"/>
+            <GradientStop Color="#FF5E695A" Offset="1"/>
         </LinearGradientBrush>
     </Window.Background>
-    
-    <Grid Margin="30">
-        <Grid.Resources>
-            <DataTemplate DataType="{x:Type vms:WatchlistViewModel}">
-                <views:WatchlistView/>
-            </DataTemplate>
-            <DataTemplate DataType="{x:Type vms:AddToWatchlistViewModel}">
-                <views:AddToWatchlistView/>
-            </DataTemplate>
-        </Grid.Resources>
-        
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FF342D3A"/>
-                <GradientStop Color="#FF2D1F1F" Offset="1"/>
-            </LinearGradientBrush>
-        </Grid.Background>
 
-        <ContentControl Content="{Binding CurrentViewModel}"/>
-    </Grid>
+    <materialDesign:Card Margin="30" UniformCornerRadius="20">
+        <materialDesign:Card.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FF9C7DB7"/>
+                <GradientStop Color="#FFC5A9A9" Offset="1"/>
+            </LinearGradientBrush>
+        </materialDesign:Card.Background>
+
+        <Grid>
+            <Grid.Resources>
+                <DataTemplate DataType="{x:Type vms:WatchlistViewModel}">
+                    <views:WatchlistView/>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:AddToWatchlistViewModel}">
+                    <views:AddToWatchlistView/>
+                </DataTemplate>
+            </Grid.Resources>
+
+            <ContentControl Content="{Binding CurrentViewModel}"/>
+        </Grid>
+    </materialDesign:Card>
 </Window>
