--- a/MovieWatchlist/Views/WatchlistView.xaml
+++ b/MovieWatchlist/Views/WatchlistView.xaml
@@ -28,7 +28,7 @@
             HorizontalAlignment="Center" 
             FontSize="30" 
             Foreground="White"
-            Margin="0 0 0 10"/>
+            Margin="0 10 0 10"/>
 
         <Button
             Style="{StaticResource MaterialDesignRaisedAccentButton}"
@@ -50,51 +50,60 @@
 
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Left"/>
-                    <Setter Property="Height" Value="30"/>
-                    <Setter Property="Margin" Value="5"/>
+                    <!--<Setter Property="HorizontalContentAlignment" Value="Center"/>
+                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                    <Setter Property="Height" Value="30"/>-->
+                   
                     <Setter Property="FontSize" Value="15"/>
                 </Style>
             </ListView.ItemContainerStyle>
 
             <ListView.View>
                 <GridView>
+                    <!--<GridViewColumn Header="Image" Width="100">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Source="C:\Users\User\Desktop\Stuff\fightClub.jpg"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>-->
+
                     <GridViewColumn Header="Name" Width="100">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Title}" HorizontalAlignment="Left" Foreground="White"/>
+                                <TextBlock Text="{Binding Title}" Margin="5" HorizontalAlignment="Center" Foreground="White"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="Release Year" Width="100">
+                    <GridViewColumn Header="Release Year" Width="110">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding ReleaseYear}" Padding="0 0 20 0" Foreground="White"/>
+                                <TextBlock Text="{Binding ReleaseYear}" HorizontalAlignment="Center" Foreground="White"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="Director" Width="100">
+                    <GridViewColumn Header="Director" Width="110">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Director}" Padding="0 0 20 0" Foreground="White"/>
+                                <TextBlock Text="{Binding Director}" HorizontalAlignment="Center" Foreground="White"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="Episodes" Width="100">
+                    <GridViewColumn Header="Episodes" Width="110">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding EpisodeCount}" Padding="0 0 20 0" Foreground="White"/>
+                                <TextBlock Text="{Binding EpisodeCount}" HorizontalAlignment="Center" Foreground="White"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="Rating" Width="100">
+                    <GridViewColumn Header="Rating" Width="60">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Rating}" Foreground="White"/>
+                                <TextBlock Text="{Binding Rating}" HorizontalAlignment="Center" Foreground="White"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
