--- a/MovieWatchlist/Views/AddToWatchlistView.xaml
+++ b/MovieWatchlist/Views/AddToWatchlistView.xaml
@@ -14,6 +14,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
         <TextBlock 
@@ -152,7 +153,14 @@
 
         </Grid>
 
-        <StackPanel Orientation="Horizontal" Grid.Row="3">
+        <Button 
+            Grid.Row="3"
+            Style="{StaticResource MaterialDesignFlatSecondaryMidBgButton}"
+            Width="100"
+            Command="{Binding AddImageCommand}"
+            Content="Add Image"/>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="4">
             <Button
                 Style="{StaticResource MaterialDesignFlatSecondaryMidBgButton}"
                 Content="Cancel"
