--- a/MovieWatchlist/Views/WatchlistView.xaml
+++ b/MovieWatchlist/Views/WatchlistView.xaml
@@ -100,6 +100,14 @@
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
+                    <GridViewColumn Header="Watched Episodes" >
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding WatchedEpisodes}" HorizontalAlignment="Center" Foreground="White"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+
                     <GridViewColumn Header="Rating" >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
